Ver cache en puerto 3000

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
     build:
       context: ./cache
       dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
     depends_on:
       - generador
 
