--- a/generador/package.json
+++ b/generador/package.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "main": "generador.js",
     "dependencies": {
-      "mongodb": "^5.8.0"
+      "mongodb": "^5.8.0",
       "node-fetch": "^2.6.11"
     }
   }
