Modulo de visualización

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,5 +54,43 @@ services:
       - ./procesamientodatos:/workspace/procesamiento/datos
       - ./resultados:/workspace/resultados
 
+  elasticsearch:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.13.4
+    container_name: elasticsearch
+    environment:
+      - discovery.type=single-node
+      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+      - xpack.security.enabled=false
+    ports:
+      - "9200:9200"
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:8.13.4
+    container_name: kibana
+    environment:
+      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - xpack.security.enabled=false
+    ports:
+      - "5601:5601"
+    depends_on:
+      - elasticsearch
+
+  visualizacion:
+    build:
+      context: ./visualizacion
+      dockerfile: Dockerfile
+    environment:
+      - ELASTIC_HOST=elasticsearch
+      - ELASTIC_PORT=9200
+      - INDEX_NAME=eventos_procesados
+      - DATA_DIR=/app/resultados
+    volumes:
+      - ./resultados:/app/resultados:ro
+    depends_on:
+      - elasticsearch
+
 volumes:
   mongo-data:
+  esdata:
