--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ echo "*.pyc" >> .gitignore
 echo "*.log" >> .gitignore
 echo ".env" >> .gitignore
 echo "mongo_data/" >> .gitignore
+echo "resultados/" >> .gitignore
