--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,9 @@ services:
     build:
       context: ./procesamiento
       dockerfile: Dockerfile.pig
-    user: "${UID:-1000}:${GID:-1000}"
+      args:
+        UID: ${UID:-1000}
+        GID: ${GID:-1000}
     volumes:
       - ./procesamientodatos:/workspace/procesamiento/datos
       - ./resultados:/workspace/resultados
