--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,14 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - mongo-data:/data/db
+      - mongo-data:/data/db:z
 
   scraper:
     build:
       context: ./scraper
       dockerfile: Dockerfile
     volumes:
-      - ./almacenamiento:/app/almacenamiento
+      - ./almacenamiento:/app/almacenamiento:z
     depends_on:
       - mongo
     environment:
@@ -46,8 +46,8 @@ services:
         UID: ${UID:-1000}
         GID: ${GID:-1000}
     volumes:
-      - ./trafico.eventos.json:/app/trafico.eventos.json:ro
-      - ./procesamiento/datos:/app/datos
+      - ./trafico.eventos.json:/app/trafico.eventos.json:ro,z
+      - ./procesamiento/datos:/app/datos:z
 
   pig:
     build:
@@ -57,8 +57,8 @@ services:
         UID: ${UID:-1000}
         GID: ${GID:-1000}
     volumes:
-      - ./procesamiento/datos:/workspace/datos
-      - ./resultados:/workspace/resultados
+      - ./procesamiento/datos:/workspace/datos:z
+      - ./resultados:/workspace/resultados:z
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:8.13.4
@@ -70,7 +70,7 @@ services:
     ports:
       - "9200:9200"
     volumes:
-      - esdata:/usr/share/elasticsearch/data
+      - esdata:/usr/share/elasticsearch/data:z
 
   kibana:
     image: docker.elastic.co/kibana/kibana:8.13.4
@@ -93,7 +93,7 @@ services:
       - INDEX_NAME=eventos_procesados
       - DATA_DIR=/app/resultados
     volumes:
-      - ./resultados:/app/resultados:ro
+      - ./resultados:/app/resultados:ro,z
     depends_on:
       - elasticsearch
 
